update README with benchmark module and first measured results
Documents the benchmark/ Gradle module, its runBenchmark task and
options, and summarises the first measured results (Apple Silicon,
macOS 15, G1GC): p50=3 ms / p99=6 ms timing deviation flat from 1
to 100 concurrent projects, with live heap overhead under 3 MB total.
Points to doc/vsm-realtime-capabilities.md for full analysis.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>